--- a/project3/index.html
+++ b/project3/index.html
@@ -4,6 +4,7 @@
         <title>Mackenzie Humprhey - Project 3</title>
 </head>
 <body>
+    <img src="img/grand-canyon.jpg" alt="Aerial View of the Grand Canyon" />
     <a href="../index.html" title="Corse Home Page">Back to Course Home Page</a>
 </body>
 </html>
