--- a/project4/index.html
+++ b/project4/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Fictive Kin - Purpose</title>
+    <link rel="stylesheet" href="https://use.typekit.net/eym0uuf.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<h1>Purpose</h1>
