--- a/project4/index.html
+++ b/project4/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Fictive Kin - Purpose</title>
     <link rel="stylesheet" href="https://use.typekit.net/eym0uuf.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="project4/css/styles.css">
 </head>
 <body>
 	<h1>Purpose</h1>
