--- a/project5/index.html
+++ b/project5/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>Mackenzie Humprhey - Project 3</title>
 </head>
+    <link rel="stylessheet"
+    type="text/css"
+    href="styles.css"
+    /link>
 <body>
     <h1>Modern Graphic Design: Directions and Purpose</h1> 
     <h2>What is graphic design?</h2>
