--- a/project5/index.html
+++ b/project5/index.html
@@ -3,10 +3,8 @@
 <head>
     <title>Mackenzie Humprhey - Project 3</title>
 </head>
-    <link rel="stylessheet"
-    type="text/css"
-    href="styles.css"
-    /link>
+    <link rel="stylesheet" href="https://use.typekit.net/eym0uuf.css">
+    <link rel="stylesheet" type="text/css" href="project5/css/styles.css">
 <body>
     <h1>Modern Graphic Design: Directions and Purpose</h1> 
     <h2>What is graphic design?</h2>
