--- a/project5/index.html
+++ b/project5/index.html
@@ -4,7 +4,7 @@
     <title>Mackenzie Humprhey - Project 3</title>
 </head>
     <link rel="stylesheet" href="https://use.typekit.net/eym0uuf.css">
-    <link rel="stylesheet" type="text/css" href="project5/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="project5/css/5styles.css">
 <body>
     <h1>Modern Graphic Design: Directions and Purpose</h1> 
     <h2>What is graphic design?</h2>
