--- a/project4/index.html
+++ b/project4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Fictive Kin - Purpose</title>
-    <link rel="stylesheet" type="text/css" href="project4/css/4styles.css">
+    <link rel="stylesheet" type="text/css" href="css/4styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/eym0uuf.css">
 </head>
 <body>
