--- a/project5/index.html
+++ b/project5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Mackenzie Humprhey - Project 3</title>
-    <link rel="stylesheet" type="text/css" href="project5/css/5styles.css">
+    <link rel="stylesheet" type="text/css" href="css/5styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/eym0uuf.css">
 </head>
 <body>
