--- a/project6/index.html
+++ b/project6/index.html
@@ -2,192 +2,173 @@
 <html>
 <head>
   <title>Charlie's Cafe</title>
+  <link rel="stylesheet" type="text/css" href="css/6styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://use.typekit.net/eym0uuf.css">
   <link rel="stylesheet" href="https://use.typekit.net/eym0uuf.css">
 </head>
-<style>
-    body {
-        font-family: "Acumin", sans-serif;
-        }
-    body {
-        background-image: url("/project6/img/coffee.jpg");
-        background-position: bottom;
-        background-repeat: no-repeat;
-        background-size: cover;
-        min-height: 100%;
-        }
-    html{
-        height: 100%;
-        }
-    p {
-        font-family: "Lust", serif;
-    }
-</style>
 <body>
-    <div class="w3-top w3-display-center w3-center w3-xlarge">
+    <div class="tabs ">
         <div class="w3-row w3-padding w3-black w3-center">
-            <div class="w3-display-container w3-text-white w3-display-center w3-center w3-jumbo">
-            <p>Charlie's</p>
+            <div class="charlies">
+            <h1>Charlie's</h1>
             </div>
             <div class="w3-col s3">
-            <a><button href="#" class="w3-button w3-block w3-black" onclick="document.getElementById('eat').style.display='block'">eat</button></a>
+            <a><button href="#" class="button" onclick="document.getElementById('eat').style.display='block'">eat</button></a>
             </div>
             <div class="w3-col s3">
-            <a><button href="#" class="w3-button w3-block w3-black" onclick="document.getElementById('drink').style.display='block'">drink</button></a>
+            <a><button href="#" class="button" onclick="document.getElementById('drink').style.display='block'">drink</button></a>
             </div>
             <div class="w3-col s3">
-            <a><button href="#" class="w3-button w3-block w3-black" onclick="document.getElementById('find').style.display='block'">find</button></a>
+            <a><button href="#" class="button" onclick="document.getElementById('find').style.display='block'">find</button></a>
             </div>
             <div class="w3-col s3">
-            <a><button href="#" class="w3-button w3-block w3-black" onclick="document.getElementById('contact').style.display='block'">contact</button></a>
+            <a><button href="#" class="button" onclick="document.getElementById('contact').style.display='block'">contact</button></a>
             </div>
         </div>
     </div>
-    <div id="eat" class="w3-modal">
-        <div class="w3-modal-content w3-animate-zoom">
-            <div class="w3-container w3-black w3-display-container">
-            <span onclick="document.getElementById('eat').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-                <h1>Breakfast</h1>
+    <div id="eat" class="open">
+        <div class="zoom animate">
+            <span onclick="document.getElementById('eat').style.display='none'" class="button">x</span>
+            <div class="section">
+                <h2>Breakfast</h2>
             </div>
-            <div class="w3-container w3-text-black">
-                <h5>Plain Croissant <b>$</b></h5>
-                <h5>Chocolate Croissant <b>$</b></h5>
-                <h5>Strawberry Croissant <b>$</b></h5>
-                <h5>Blueberry Muffin <b>$</b></h5>
-                <h5>Chocolate Muffin <b>$</b></h5>
-                <h5>Plain Bagel <b>$</b></h5>
-                <h5>Whole Wheat Bagel <b>$</b></h5>
-                <h5>Blueberry Bagel <b>$</b></h5>
-                <h5>Cinnamon Rasin Bagel <b>$</b></h5>
-                <h5>Jalepeno Asiago Bagel <b>$</b></h5>
-                <h5>Asiago Bagel <b>$</b></h5>
+            <div class="info">
+                <h5>Plain Croissant <b>$4.75</b></h5>
+                <h5>Chocolate Croissant <b>$4.75</b></h5>
+                <h5>Strawberry Croissant <b>$4.75</b></h5>
+                <h5>Blueberry Muffin <b>$4.75</b></h5>
+                <h5>Chocolate Muffin <b>$4.75</b></h5>
+                <h5>Plain Bagel <b>$4.75</b></h5>
+                <h5>Whole Wheat Bagel <b>$4.75</b></h5>
+                <h5>Blueberry Bagel <b>$4.75</b></h5>
+                <h5>Cinnamon Rasin Bagel <b>$4.75</b></h5>
+                <h5>Jalepeno Asiago Bagel <b>$4.75</b></h5>
+                <h5>Asiago Bagel <b>$4.75</b></h5>
             </div>
-            <div class="w3-container w3-black">
-                <h1>Lunch</h1>
+            <div class="section">
+                <h2>Lunch</h2>
             </div>
-            <div class="w3-container w3-text-black">
-                <h5>Italiano Panini <b>$</b></h5>
-                <h5>Seville Panini <b>$</b></h5>
-                <h5>Milano Panini <b>$</b></h5>
-                <h5>Caprese Panini <b>$</b></h5>
-                <h5>Turkey Florentine Panini <b>$</b></h5>
-                <h5>Vegetarian Panini <b>$</b></h5>
-                <h5>Mediterrnean Chicken Panini <b>$</b></h5>
-                <h5>Chicken Tikka <b>$</b></h5>
-                <h5>Vegetable Korma <b>$</b></h5>
-                <h5>Ham and Swiss Croissant <b>$</b></h5>
+            <div class="info">
+                <h5>Italiano Panini <b>$6.95</b></h5>
+                <h5>Seville Panini <b>$6.95</b></h5>
+                <h5>Milano Panini <b>$6.95</b></h5>
+                <h5>Caprese Panini <b>$6.95</b></h5>
+                <h5>Turkey Florentine Panini <b>$6.95</b></h5>
+                <h5>Vegetarian Panini <b>$6.95</b></h5>
+                <h5>Mediterrnean Chicken Panini <b>$6.95</b></h5>
+                <h5>Chicken Tikka <b>$6.50</b></h5>
+                <h5>Vegetable Korma <b>$6.50</b></h5>
+                <h5>Ham and Swiss Croissant <b>$4.00</b></h5>
             </div>
-            <div class="w3-container w3-black">
-                <h1>Snacks</h1>
+            <div class="section">
+                <h2>Snacks</h2>
             </div>
-            <div class="w3-container w3-text-black">
-                <h5>Chips <b>$</b></h5>
-                <h5>Apple <b>$</b></h5>
-                <h5>Banana <b>$</b></h5>
-                <h5>Yogurt <b>$</b></h5>
-                <h5>Baby Bell Cheese <b>$</b></h5>
-                <h5>Chocolate Chip Cookie <b>$</b></h5>
-                <h5>Brownie <b>$</b></h5>
-                <h5>Rice Krispy Treat <b>$</b></h5>
-                <h5>Lemon Bar <b>$</b></h5>
-                <h5>Granola Bar <b>$</b></h5>
-            </div>
-        </div>
-    </div>
-    <div id="drink" class="w3-modal">
-        <div class="w3-modal-content w3-animate-zoom">
-            <div class="w3-container w3-black w3-display-container">
-            <span onclick="document.getElementById('drink').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-                <h1>Hot Coffee</h1>
-            </div>
-            <div class="w3-container w3-text-black">
-                <h5>Drip Coffee <b>$</b></h5>
-                <h5>Americano <b>$</b></h5>
-                <h5>Latte <b>$</b></h5>
-                <h5>Mocha <b>$</b></h5>
-                <h5>Cappuccino <b>$</b></h5>
-                <h5>Macchiato <b>$</b></h5>
-                <h5>Espresso <b>$</b></h5>
-                <h5>Hot Chocolate <b>$</b></h5>
-            </div>
-            <div class="w3-container w3-black">
-                <h1>Iced Coffee</h1>
-            </div>
-            <div class="w3-container w3-text-black">
-                <h5>Drip Coffee <b>$</b></h5>
-                <h5>Americano <b>$</b></h5>
-                <h5>Latte <b>$</b></h5>
-                <h5>Mocha <b>$</b></h5>
-                <h5>Mocha Frappe <b>$</b></h5>
-            </div>
-            <div class="w3-container w3-black">
-                <h1>Hot or Iced Tea</h1>
-            </div>
-            <div class="w3-container w3-text-black">
-                <h5>Chai Latte <b>$</b></h5>
-                <h5>Thai Tea <b>$</b></h5>
-                <h5>Gunpowder Green <b>$</b></h5>
-                <h5>Aged Earl Grey <b>$</b></h5>
-                <h5>Chamomile <b>$</b></h5>
-                <h5>Jasmine Green <b>$</b></h5>
-                <h5>Golden Chai <b>$</b></h5>
-                <h5>Mint <b>$</b></h5>
-                <h5>Matte Lemon <b>$</b></h5>
-                <h5>Breakfast Blend <b>$</b></h5>
-                <h5>Silver and Spice <b>$</b></h5>
-                <h5>Raspberry Pomegranate <b>$</b></h5>
-                <h5>Lemon Ginger <b>$</b></h5>
-            </div>
-            <div class="w3-container w3-black">
-                <h1>Additions and Substitutions</h1>
-            </div>
-            <div class="w3-container w3-text-black">
-                <h5>Almond Milk <b>$</b></h5>
-                <h5>Soy Milk <b>$</b></h5>
-                <h5>Flax Milk <b>$</b></h5>
-                <h5>Raspberry Emergen-C for Tea <b>$</b></h5>
-                <h5>Tangerine Emergen-C for Tea <b>$</b></h5>
+            <div class="info">
+                <h5>Chips <b>$2.00</b></h5>
+                <h5>Apple <b>$1.50</b></h5>
+                <h5>Banana <b>$1.50</b></h5>
+                <h5>Yogurt <b>$2.00</b></h5>
+                <h5>Baby Bell Cheese <b>$.50</b></h5>
+                <h5>Chocolate Chip Cookie <b>$1.75</b></h5>
+                <h5>Brownie <b>$1.75</b></h5>
+                <h5>Rice Krispy Treat <b>$1.75</b></h5>
+                <h5>Lemon Bar <b>$1.75</b></h5>
+                <h5>Granola Bar <b>$1.25</b></h5>
             </div>
         </div>
     </div>
-    <div id="find" class="w3-modal">
-        <div class="w3-modal-content w3-animate-zoom">
-            <div class="w3-container w3-black">
-            <span onclick="document.getElementById('find').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-                <h1>Biodesign</h1>
+    <div id="drink" class="open">
+        <div class="zoom animate">
+            <span onclick="document.getElementById('drink').style.display='none'" class="button">x</span>
+            <div class="section">
+                <h2>Hot Coffee</h2>
             </div>
-            <div class="w3-container w3-text-black">
+            <div class="info">
+                <h5>Drip Coffee <b>$2.25</b></h5>
+                <h5>Americano <b>$2.50</b></h5>
+                <h5>Latte <b>$3.75</b></h5>
+                <h5>Mocha <b>$4.00</b></h5>
+                <h5>Cappuccino <b>$3.50</b></h5>
+                <h5>Macchiato <b>$2.50</b></h5>
+                <h5>Espresso <b>$2.50</b></h5>
+            </div>
+            <div class="section">
+                <h2>Iced Coffee</h2>
+            </div>
+            <div class="info">
+                <h5>Drip Coffee <b>$2.70</b></h5>
+                <h5>Americano <b>$2.50</b></h5>
+                <h5>Latte <b>$3.75</b></h5>
+                <h5>Mocha <b>$3.95</b></h5>
+                <h5>Mocha Frappe <b>$4.25</b></h5>
+            </div>
+            <div class="section">
+                <h2>Hot or Iced Tea</h2>
+            </div>
+            <div class="info">
+                <h5>Chai Latte <b>$3.95</b></h5>
+                <h5>Thai Tea <b>$3.25</b></h5>
+                <h5>Gunpowder Green <b>$2.50</b></h5>
+                <h5>Aged Earl Grey <b>$2.50</b></h5>
+                <h5>Chamomile <b>$2.50</b></h5>
+                <h5>Jasmine Green <b>$2.50</b></h5>
+                <h5>Golden Chai <b>$2.50</b></h5>
+                <h5>Mint <b>$2.50</b></h5>
+                <h5>Matte Lemon <b>$2.50</b></h5>
+                <h5>Breakfast Blend <b>$2.50</b></h5>
+                <h5>Silver and Spice <b>$2.50</b></h5>
+                <h5>Raspberry Pomegranate <b>$2.50</b></h5>
+                <h5>Lemon Ginger <b>$2.50</b></h5>
+            </div>
+            <div class="section">
+                <h2>Additions and Substitutions</h2>
+            </div>
+            <div class="info">
+                <h5>Almond Milk <b>$0.75</b></h5>
+                <h5>Soy Milk <b>$0.75</b></h5>
+                <h5>Flax Milk <b>$0.75</b></h5>
+                <h5>Raspberry Emergen-C for Tea <b>$0.75</b></h5>
+                <h5>Tangerine Emergen-C for Tea <b>$0.75</b></h5>
+            </div>
+        </div>
+    </div>
+    <div id="find" class="open">
+        <div class="zoom animate">
+            <span onclick="document.getElementById('find').style.display='none'" class="button">x</span>
+            <div class="section">
+                <h2>Biodesign</h2>
+            </div>
+            <div class="info">
                 <h5>Monday - Thursday: 7am - 4pm</h5>
                 <h5>Fridays: 7am - 2pm</h5>
             </div>
-            <div class="w3-container w3-black">
-                <h1>Hayden Library</h1>
+            <div class="section">
+                <h2>Hayden Library</h2>
             </div>
-            <div class="w3-container w3-text-black">
+            <div class="info">
                 <h5>Monday - Thursday: 7am - 5pm</h5>
                 <h5>Fridays: 7am - 2pm</h5>
             </div>
-            <div class="w3-container w3-black">
-                <h1>Design North</h1>
+            <div class="section">
+                <h2>Design North</h2>
             </div>
-            <div class="w3-container w3-text-black">
+            <div class="info">
                 <h5>Monday - Thursday: 7am - 7pm</h5>
                 <h5>Fridays: 7am - 4pm</h5>
             </div>
         </div>
     </div>
-    <div id="contact" class="w3-modal">
-        <div class="w3-modal-content w3-animate-zoom">
-            <div class="w3-container w3-black">
-            <span onclick="document.getElementById('contact').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-                <h1>???</h1>
+    <div id="contact" class="open">
+        <div class="zoom animate">
+            <span onclick="document.getElementById('contact').style.display='none'" class="button">x</span>
+            <div class="section">
+                <h2>Charlie Jackson</h2>
             </div>
-            <div class="w3-container w3-text-black">
-                <h5>Phone:</h5>
-                <h5>Email:</h5>
+            <div class="info">
+                <h5>Phone: 480-123-4567</h5>
+                <h5>Email: charliejackson@gmail.com</h5>
             </div>
         </div>
     </div>
